# lanz-mining

./: .gitattributes  .gitignore  .gitmodules  README.md  lanz-mining-tiny-demo.mov  package.json  pyproject.toml
.github/workflows/: ghpages.yaml  hugo.yaml
configs/: carenmiosga.json  hartaberfair.json  maischberger.json  markuslanz.json  maybritillner.json
lanz-mining-frontend/: README.md  hugo.toml
lanz-mining-frontend/content/about/: _index.md
lanz-mining-frontend/content/details/: _index.md
lanz-mining-frontend/public/: index.html  index.xml  sitemap.xml
lanz-mining-frontend/public/about/: index.html  index.xml
lanz-mining-frontend/public/categories/: index.html  index.xml
lanz-mining-frontend/public/css/: styles.css
lanz-mining-frontend/public/details/: index.html  index.xml
lanz-mining-frontend/public/js/: greetingsVis.js
lanz-mining-frontend/public/posts/: index.html  index.xml
lanz-mining-frontend/public/tags/: index.html  index.xml
lanz-mining-frontend/themes/minimal-vis-theme/: hugo.toml  package.json  tailwind.config.js  theme.toml
lanzmining/: .gitignore  README.md  pyproject.toml
lanzmining/config/: example.json
lanzmining/src/: loaders.py  main.py
lanzmining/src/misc/: __init__.py  constants.py  datamodels.py
lanzmining/src/process/: __init__.py  csvbuilder.py  utils.py
lanzmining/src/process/mappings/: __init__.py  media.py  names.py  politics.py  roles.py  utils.py
lanzmining/tests/dummy_data/: test_dummy_data.csv  test_dummy_snapshot.csv
lanzmining/tests/misc/: test_contants.py  test_datamodels.py
lanzmining/tests/process/: test_csvbuilder.py  test_simplelogics.py
notebooks/btw25/: GuestsByFrequency.ipynb  MonthlyTopicDistributions.ipynb  VibeByWording.ipynb
src/lanz_mining/: context.py  crawl.py  main.py  params.py  process.py  raw.py  regular_crawl.py  scrape_local.py  scrapy.cfg  utils.py  vis.py
src/lanz_mining/database/: init_database.py  mappings.py  naming.py
src/lanz_mining/dataproc/: basics.py  datastacks.py  experts.py  helpers.py  preprocess.py  processors.py  register.py  text.py  utils.py
tests/: conftest.py  test_schemes.py
tests/data/: guests.csv
tests/dataproc/: conftest.py  test_datastacks.py  test_experts.py  test_helpers.py  test_preprocess.py
tests/html/: carenmiosga-example.html  hartaberfair-example-1.html  hartaberfair-example.html  maischberger-example.html  markuslanz-example.html  maybritillner-example.html
tests/miner/: test_parse.py  test_parse_haf.py  test_parse_illner.py  test_parse_lanz.py  test_parse_maisch.py  test_parse_miosga.py
visuals/: README.md  package-lock.json  package.json
visuals/src/: app.html
visuals/src/lib/: config.js  (+3 more)
web/: README.md  build.sh  hugo.yaml  netlify.toml  observablehq.config.js  package.json  tailwind.config.js
web/archetypes/: default.md
web/content/: _index.md  daten.md  weiter.md
web/data/: meta.json
web/lanz-mining-web/: package.json  svelte.config.js  vite.config.js
web/src/: index.md
web/static/: data.csv
(+158 files in other folders)
