[project]
name = "lanz-mining"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "arrrrrmin", email = "info@dotarmin.info"},
]
dependencies = [
    "scrapy>=2.11.0",
    "beautifulsoup4>=4.12.3",
    "tqdm>=4.66.1",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.0",
    "psycopg2-binary>=2.9.9",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
    "icecream>=2.1.3",
]

[tool.black]
line-length = 100

[tool.pdm]
package-type = "library"
