[project]
name = "lanz-mining"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "arrrrrmin", email = "info@dotarmin.info"},
]
dependencies = [
    "scrapy>=2.11.0",
    "beautifulsoup4>=4.12.3",
    "tqdm>=4.66.1",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.9",
    "polars>=1.17.1",
    "altair>=5.5.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.black]
line-length = 100

[tool.pdm.scripts]
helpers = "pytest tests/dataproc/test_helpers.py -s -p no:warnings"
process = "python -m src.lanz_mining.process --file exports/guests.csv --write"
explore = "python -m src.lanz_mining.plots.explore --file exports/guests.csv"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
    "icecream>=2.1.3",
    "matplotlib>=3.8.2",
]