[project]
name = "lanz-mining"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "arrrrrmin", email = "info@dotarmin.info"}
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "scrapy>=2.11.0",
    "tqdm>=4.66.1",
    "polars>=1.17.1",
]

[project.optional-dependencies]
inference = [
    "transformers>=4.48.3",
    "torch>=2.6.0",
]

[tool.black]
line-length = 100

[tool.pdm.scripts]
helpers = "pytest tests/dataproc/test_helpers.py -s -p no:warnings"
process = "python -m src.lanz_mining.process --file exports/guests.csv --write"
explore = "python -m src.lanz_mining.plots.explore --file exports/guests.csv"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "icecream>=2.1.3",
    "matplotlib>=3.8.2",
    "jupyter>=1.1.1",
]